--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,125 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
 body {
-  background: #1794AC; }
-  body h1, body h2, body h3 {
-    font-family: 'Scope One', serif;
-    color: #B2C000; }
-  body p, body a {
-    font-family: 'Assistant', sans-serif;
-    color: #B2C000; }
+  font-family: 'Antic Didone', serif;
+  background-color: #E94C6F;
+  color: #FFF;
+  font-size: 1.2rem;
+  overflow: hidden; }
+
+h1 {
+  font-family: 'Happy Monkey', cursive;
+  color: #FFF;
+  font-size: 3.5rem; }
+
+.container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/waves.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.main {
+  width: 100vw;
+  height: 100vh; }
+
+.featured-container {
+  position: absolute;
+  left: -300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s ease;
+  z-index: 20; }
+  .featured-container.featured-container-slide {
+    left: 0px; }
+  .featured-container .featured-videos {
+    height: 100vh;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .featured-container .featured-trigger {
+    height: 100vh;
+    font-weight: bolder;
+    margin-left: 25px;
+    display: flex;
+    align-items: center;
+    transition: all 1s ease; }
+    .featured-container .featured-trigger p {
+      transform: rotate(-90deg); }
+    .featured-container .featured-trigger:hover {
+      cursor: pointer;
+      color: #8C489F; }
+
+.filters {
+  position: absolute;
+  right: 3%;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.form-container {
+  position: absolute;
+  right: 3%;
+  bottom: 5%; }
+
+.form-trigger {
+  transition: all 1s ease; }
+  .form-trigger:hover {
+    cursor: pointer;
+    color: #8C489F; }
+
+.video-filter {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: all 1s ease; }
+  .video-filter img {
+    width: 30px;
+    height: 30px;
+    margin: 10px; }
+  .video-filter:hover {
+    cursor: pointer;
+    color: #8C489F; }
+
+.video {
+  position: absolute; }
+  .video img {
+    -webkit-clip-path: polygon(180px 100px, 298px 142px, 250px 100px, 300px 50px);
+    transition: -webkit-clip-path 0.4s ease; }
+    .video img:hover {
+      cursor: pointer; }
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto; }
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.modal {
+  background-color: #FEDA6A !important;
+  padding: 15px !important; }
+
+h3 {
+  background-color: #FEDA6A !important;
+  color: #FF5964 !important;
+  font-family: 'Happy Monkey', cursive !important;
+  text-align: center !important; }
 
 /*# sourceMappingURL=styles.css.map */
