--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,27 +4,31 @@
   padding: 0; }
 
 body {
-  font-family: 'Antic Didone', serif;
-  background-color: #E94C6F;
+  font-family: 'Happy Monkey', cursive;
   color: #FFF;
   font-size: 1.2rem;
   overflow: hidden; }
 
 h1 {
-  font-family: 'Happy Monkey', cursive;
+  font-family: 'Roboto', sans-serif;
   color: #FFF;
-  font-size: 3.5rem; }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 7rem; }
 
 .container {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("/waves.svg");
+  background-image: url("/texture3.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
 
 .main {
+  background-color: #E94C6F;
   width: 100vw;
   height: 100vh; }
 
@@ -47,15 +51,19 @@ h1 {
   .featured-container .featured-trigger {
     height: 100vh;
     font-weight: bolder;
-    margin-left: 25px;
     display: flex;
-    align-items: center;
-    transition: all 1s ease; }
+    align-items: center; }
     .featured-container .featured-trigger p {
-      transform: rotate(-90deg); }
-    .featured-container .featured-trigger:hover {
-      cursor: pointer;
-      color: #8C489F; }
+      position: relative;
+      transform: rotate(-90deg);
+      background-color: #ff1744;
+      color: #FFF;
+      padding: 10px 20px;
+      transition: all 1s ease; }
+      .featured-container .featured-trigger p:hover {
+        background-color: #0B90AA;
+        cursor: pointer;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
 
 .filters {
   position: absolute;
@@ -68,11 +76,79 @@ h1 {
   right: 3%;
   bottom: 5%; }
 
+input[type=url], select {
+  width: 100%;
+  height: 30px;
+  display: block;
+  font-family: 'Happy Monkey', cursive;
+  font-size: 0.7em;
+  color: #9068BE;
+  border: none;
+  margin: 15px 0;
+  background: #FEDA6A; }
+  input[type=url]:focus, select:focus {
+    outline: none; }
+
+input[type=url] {
+  padding: 15px; }
+
+.input-container {
+  margin-top: 30px;
+  text-align: right; }
+
+.form-share {
+  font-family: 'Happy Monkey', cursive;
+  display: inline;
+  background-color: #ff1744;
+  font-size: 0.8rem;
+  color: #FFF;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  transition: all 1s ease; }
+  .form-share:hover {
+    background-color: #0B90AA;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+
 .form-trigger {
+  background-color: #ff1744;
+  color: #FFF;
+  padding: 10px 20px;
   transition: all 1s ease; }
   .form-trigger:hover {
+    background-color: #0B90AA;
     cursor: pointer;
-    color: #8C489F; }
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+
+.form-trigger:before {
+  position: absolute;
+  top: 50%;
+  right: -100%;
+  width: 0px;
+  display: block;
+  content: '';
+  height: 3px;
+  background: #FEDA6A;
+  transition: width 0.5s ease; }
+
+.form-trigger:hover:before {
+  width: 100%; }
+
+.featured-trigger p:before {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3px;
+  height: 0;
+  display: block;
+  content: '';
+  background: #FEDA6A;
+  transition: height 0.5s ease; }
+
+.featured-trigger p:hover:before {
+  height: 50px; }
 
 .video-filter {
   display: flex;
@@ -85,13 +161,14 @@ h1 {
     margin: 10px; }
   .video-filter:hover {
     cursor: pointer;
-    color: #8C489F; }
+    color: #FEDA6A; }
 
 .video {
   position: absolute; }
   .video img {
     -webkit-clip-path: polygon(180px 100px, 298px 142px, 250px 100px, 300px 50px);
-    transition: -webkit-clip-path 0.4s ease; }
+    transition: -webkit-clip-path 0.4s ease;
+    max-width: 100%; }
     .video img:hover {
       cursor: pointer; }
 
@@ -118,8 +195,19 @@ h1 {
 
 h3 {
   background-color: #FEDA6A !important;
-  color: #FF5964 !important;
+  color: #0B90AA !important;
   font-family: 'Happy Monkey', cursive !important;
   text-align: center !important; }
+
+.heart {
+  position: absolute;
+  left: 30px;
+  bottom: 30px; }
+  .heart:hover {
+    cursor: pointer; }
+
+.heart img {
+  height: 20px;
+  width: 20px; }
 
 /*# sourceMappingURL=styles.css.map */
