--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -5,30 +5,34 @@
 }
 
 body {
-  font-family: 'Antic Didone', serif;
-  background-color: #E94C6F;
+  font-family: 'Happy Monkey', cursive;
   color: #FFF;
   font-size: 1.2rem;
   overflow: hidden;
 }
 
 h1 {
-  font-family: 'Happy Monkey', cursive;
+  font-family: 'Roboto', sans-serif;
   color: #FFF;
-  font-size: 3.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 7rem;
 }
 
 .container {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url('/waves.svg');
+  background-image: url('/texture3.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .main {
+  background-color: #E94C6F;
   width: 100vw;
   height: 100vh;
 }
@@ -57,18 +61,22 @@ h1 {
   .featured-trigger {
     height: 100vh;
     font-weight: bolder;
-    margin-left: 25px;
     display: flex;
     align-items: center;
-    transition: all 1s ease;
 
     p {
+      position: relative;
       transform: rotate(-90deg);
-    }
+      background-color: #ff1744;
+      color: #FFF;
+      padding: 10px 20px;
+      transition: all 1s ease;
 
-    &:hover {
-      cursor: pointer;
-      color: #8C489F;
+      &:hover {
+        background-color: #0B90AA;
+        cursor: pointer;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      }
     }
   }
 }
@@ -87,14 +95,103 @@ h1 {
   bottom: 5%;
 }
 
-.form-trigger {
+input[type=url], select {
+  width: 100%;
+  height: 30px;
+  display: block;
+  font-family: 'Happy Monkey', cursive;
+  font-size: 0.7em;
+  color: #9068BE;
+  border: none;
+  margin: 15px 0;
+  background: #FEDA6A;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+input[type=url] {
+  padding: 15px;
+}
+
+.input-container {
+  margin-top: 30px;
+  text-align: right;
+}
+
+.form-share {
+  font-family: 'Happy Monkey', cursive;
+  display: inline;
+  background-color: #ff1744;
+  font-size: 0.8rem;
+  color: #FFF;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
   transition: all 1s ease;
 
   &:hover {
+    background-color: #0B90AA;
     cursor: pointer;
-    color: #8C489F;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
   }
 }
+
+.form-trigger {
+  background-color: #ff1744;
+  color: #FFF;
+  padding: 10px 20px;
+  transition: all 1s ease;
+
+  &:hover {
+    background-color: #0B90AA;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+}
+
+.form-trigger:before {
+  position: absolute;
+  top: 50%;
+  right: -100%;
+  width: 0px;
+  display: block;
+  content: '';
+  height: 3px;
+  background: #FEDA6A;
+  transition: width 0.5s ease;
+}
+
+.form-trigger:hover:before {
+  width: 100%;
+}
+
+.featured-trigger p:before {
+  // parent is positioned relative
+  position: absolute;
+  // -45 so that it doest conflict with featured vids when they are toggled
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3px;
+  height: 0;
+  display: block;
+  content: '';
+  background: #FEDA6A;
+  transition: height 0.5s ease;
+}
+
+.featured-trigger p:hover:before {
+  height: 50px;
+}
+
+
+
+
+
+
 
 .video-filter {
   display: flex;
@@ -110,7 +207,7 @@ h1 {
 
   &:hover {
     cursor: pointer;
-    color: #8C489F;
+    color: #FEDA6A;
   }
 }
 
@@ -120,6 +217,7 @@ h1 {
   img {
     -webkit-clip-path: polygon(180px 100px,298px 142px,250px 100px,300px 50px);
     transition: -webkit-clip-path 0.4s ease;
+    max-width: 100%;
 
     &:hover {
       cursor: pointer;
@@ -139,7 +237,22 @@ h1 {
 
 h3 {
   background-color: #FEDA6A !important;
-  color: #FF5964 !important;
+  color: #0B90AA !important;
   font-family: 'Happy Monkey', cursive !important;
   text-align: center !important;
+}
+
+.heart {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.heart img {
+  height: 20px;
+  width: 20px;
 }
