--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -52,10 +52,14 @@ h1 {
 
   .featured-videos {
     height: 100vh;
-    width: 300px;
+    width: 4vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    .featured-video img {
+      max-height: 20%;
+    }
   }
 
   .featured-trigger {
@@ -187,12 +191,6 @@ input[type=url] {
   height: 50px;
 }
 
-
-
-
-
-
-
 .video-filter {
   display: flex;
   justify-content: flex-end;
@@ -224,6 +222,8 @@ input[type=url] {
     }
   }
 }
+
+// Override crazy iframe styling
 
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto; }
 .embed-container iframe,
